Particle Emitter set to not render still appears in 3D view, when display set to rendered only. Emitter also appears in all GL Renders and some F12 renders. #37159

Closed
opened 2013-10-20 11:26:41 +02:00 by Andrew Buttery · 11 comments

%%%--- Operating System, Graphics card ---
CPU: intel i7
RAM: 16 GB
GFX: nVidia Geforce 540M
OS: Windows 7 Pro, service pack 1

Blender: 2.49 RC2

- Blender version with error, and version that worked ---

Also found in 2.68a

- Short description of error ---

Particle Emitter set to not render still appears in 3D view when display option set to Rendered only in most cases. Affects both BI and Cycles settings. GL Render always shows the emitter and some F12 renders also dispaly the emitter when they In Cycles rendering (F12) will show the emitter for all render types unless you provide an object, group or billboard.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open Blender; Check set to Blender Render;
Add a particle system to cube; Open render sub-panel and uncheck Emitter
Open 'N' panel in 3D View. Open display sub-panel and check only render.

Expected behavior - the cube should disappear leaving just the particle position indicators.

Actual behavior: The cube is still visible.

See the attached matrix which covers each of the render types (None | Halo | etc) against the different rendering situations:
3D view (Bounding; wireframe; solid; textured; rendered - BI and Cycles)
GL Render
F12 Render (BI and Cycles)

%%%

%%%--- Operating System, Graphics card --- CPU: intel i7 RAM: 16 GB GFX: nVidia Geforce 540M OS: Windows 7 Pro, service pack 1 Blender: 2.49 RC2 - Blender version with error, and version that worked --- Also found in 2.68a - Short description of error --- Particle Emitter set to not render still appears in 3D view when display option set to Rendered only in most cases. Affects both BI and Cycles settings. GL Render always shows the emitter and some F12 renders also dispaly the emitter when they In Cycles rendering (F12) will show the emitter for all render types unless you provide an object, group or billboard. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open Blender; Check set to Blender Render; Add a particle system to cube; Open render sub-panel and uncheck Emitter Open 'N' panel in 3D View. Open display sub-panel and check only render. Expected behavior - the cube should disappear leaving just the particle position indicators. Actual behavior: The cube is still visible. See the attached matrix which covers each of the render types (None | Halo | etc) against the different rendering situations: 3D view (Bounding; wireframe; solid; textured; rendered - BI and Cycles) GL Render F12 Render (BI and Cycles) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Apologies, hit enter before completed. Attempting to attach matrix now...

Section " when they In Cycles rendering (F12) will show the emitter for all render types unless you provide an object, group or billboard" should be deleted - these circumstances are covered in the spreadsheet.%%%

%%%Apologies, hit enter before completed. Attempting to attach matrix now... Section " when they In Cycles rendering (F12) will show the emitter for all render types unless you provide an object, group or billboard" should be deleted - these circumstances are covered in the spreadsheet.%%%

%%%Have a patch here: http://www.pasteall.org/46659/diff

It solves most of the issues (only remaining ones are with Cycles, but imho this is another topic).

Will try to get it reviewed asap.%%%

%%%Have a patch here: http://www.pasteall.org/46659/diff It solves most of the issues (only remaining ones are with Cycles, but imho this is another topic). Will try to get it reviewed asap.%%%

%%%Bastien, looks good if you make these changes:

  • replace "if (ob != scene->obedit)" by "if(ob->mode == OB_MODE_OBJECT)"
  • rename part_skip_object to particle_skip_object, no need for the abbreviation
    %%%
%%%Bastien, looks good if you make these changes: * replace "if (ob != scene->obedit)" by "if(ob->mode == OB_MODE_OBJECT)" * rename part_skip_object to particle_skip_object, no need for the abbreviation %%%

%%%I also notice no changes to Blender Internal in this patch, so I guess there remains a bug in both BI and Cycles still.%%%

%%%I also notice no changes to Blender Internal in this patch, so I guess there remains a bug in both BI and Cycles still.%%%

%%%OpenGL part (viewport and render) has been fixed in r60882.

I do not see any issue with BI? As for Cycles, I’ll let Brecht have a look at it… ;)%%%

%%%OpenGL part (viewport and render) has been fixed in r60882. I do not see any issue with BI? As for Cycles, I’ll let Brecht have a look at it… ;)%%%

This issue was referenced by blender/blender-addons-contrib@f67dda6893

This issue was referenced by blender/blender-addons-contrib@f67dda689349b093ce1d11c2cba5ebb48dba8c45

This issue was referenced by f67dda6893

This issue was referenced by f67dda689349b093ce1d11c2cba5ebb48dba8c45

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f67dda6893.

Closed by commit f67dda6893.

Fixed the cycles case as well now, thanks for the report.

Fixed the cycles case as well now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37159
No description provided.